--- a/E_Commerce_Bookstore/Site.Master
+++ b/E_Commerce_Bookstore/Site.Master
@@ -69,7 +69,7 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light sticky-top">
             <div class="container">
-                <a class="navbar-brand" href="~/">📚 Book&Comic Store</a>
+                <a class="navbar-brand" href="Default.aspx">📚 Book&Comic Store</a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -79,11 +79,11 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <!-- Menú de navegación -->
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="~/">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="~/Categorias">Categorías</a></li>
-                        <li class="nav-item"><a class="nav-link" href="~/BestSeller">BestSeller</a></li>
-                        <li class="nav-item"><a class="nav-link" href="~/Populares">Populares</a></li>
-                        <li class="nav-item"><a class="nav-link" href="~/Ofertas">Ofertas</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Default.aspx">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Categorias.aspx">Categorías</a></li>
+                        <li class="nav-item"><a class="nav-link" href="BestSeller.aspx">BestSeller</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Populares.aspx">Populares</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Ofertas.aspx">Ofertas</a></li>
                          <li class="nav-item"><a class="nav-link text-primary" href="Administracion.aspx">Administracion</a></li>
                         <li class="nav-item"><a class="nav-link text-primary" href="GestionProducto.aspx">Gestion Producto</a></li>
                     </ul>
