--- a/E_Commerce_Bookstore/Site.Master
+++ b/E_Commerce_Bookstore/Site.Master
@@ -13,11 +13,11 @@
     <!-- Font Awesome (íconos) -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
 
-    
-    
+
+
     <asp:ContentPlaceHolder ID="HeadContent" runat="server"></asp:ContentPlaceHolder>
 
- <style>
+    <style>
         body {
             font-family: 'Segoe UI', sans-serif;
             background-color: #f8f9fa;
@@ -41,14 +41,14 @@
             padding: 30px 0;
         }
 
-        footer a {
-            color: #adb5bd;
-            text-decoration: none;
-        }
+            footer a {
+                color: #adb5bd;
+                text-decoration: none;
+            }
 
-        footer a:hover {
-            color: #ffffff;
-        }
+                footer a:hover {
+                    color: #ffffff;
+                }
 
         /* Buscador */
         .search-bar {
@@ -72,7 +72,7 @@
                 <a class="navbar-brand" href="Default.aspx">📚 Book&Comic Store</a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
@@ -80,11 +80,30 @@
                     <!-- Menú de navegación -->
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" href="Default.aspx">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="Categorias.aspx">Categorías</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="menuCategorias" role="button" data-bs-toggle="dropdown" data-toggle="dropdown" aria-expanded="false">Categorías</a>
+                            <ul class="dropdown-menu" aria-labelledby="menuCategorias" style="max-height: 60vh; overflow: auto;">
+                                <li><a class="dropdown-item" href="Catalogo.aspx">Todas</a></li>
+                                <li>
+                                    <hr class="dropdown-divider" />
+                                </li>
+
+                                <asp:Repeater ID="repCategoriasNavbar" runat="server">
+                                    <ItemTemplate>
+                                        <li>
+                                            <a class="dropdown-item"
+                                                href='<%# "Catalogo.aspx?idCategoria=" + Eval("Id") %>'>
+                                                <%# Eval("Nombre") %>
+                                            </a>
+                                        </li>
+                                    </ItemTemplate>
+                                </asp:Repeater>
+                            </ul>
+                        </li>
                         <li class="nav-item"><a class="nav-link" href="BestSeller.aspx">BestSeller</a></li>
                         <li class="nav-item"><a class="nav-link" href="Populares.aspx">Populares</a></li>
                         <li class="nav-item"><a class="nav-link" href="Ofertas.aspx">Ofertas</a></li>
-                         <li class="nav-item"><a class="nav-link text-primary" href="Administracion.aspx">Administracion</a></li>
+                        <li class="nav-item"><a class="nav-link text-primary" href="Administracion.aspx">Administracion</a></li>
                         <li class="nav-item"><a class="nav-link text-primary" href="GestionProducto.aspx">Gestion Producto</a></li>
                     </ul>
 
