Agrego codigo de funcionalidad para que desde Catalogo y detalle se agregue el libro en el carrito momentaneamente guardado en sesion, para agregarle unos label y funcione modifique Catalogo.aspx y el code behind, site.Master, Detalle.aspx y Carrito.aspx, tambien la clase Carrito del dominio porque me generaba error con el formulario Carrito.aspx, modifique LibroNegocio.cs para que me traiga el stock en Listar

--- a/E_Commerce_Bookstore/Site.Master
+++ b/E_Commerce_Bookstore/Site.Master
@@ -116,10 +116,16 @@
                     <!-- Iconos usuario y carrito -->
                     <ul class="navbar-nav ms-3">
                         <li class="nav-item">
-                            <a class="nav-link position-relative" href="Carrito.aspx">
-                                <i class="fa-solid fa-bag-shopping fa-lg"></i>
-                                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">2</span>
-                            </a>
+                            <asp:ScriptManager ID="ScriptManager1" runat="server" />
+                            <asp:UpdatePanel ID="updCarrito" runat="server" UpdateMode="conditional">
+                                <ContentTemplate>
+                                    <a class="nav-link position-relative" href="Carrito.aspx">
+                                        <i class="fa-solid fa-bag-shopping fa-lg"></i>
+                                        <asp:Label ID="lblCantidadCarrito" runat="server"
+                                            CssClass="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" />
+                                    </a>
+                                </ContentTemplate>
+                            </asp:UpdatePanel>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="~/Login"><i class="fa-solid fa-user fa-lg"></i></a>
