--- a/E_Commerce_Bookstore/Site.Master
+++ b/E_Commerce_Bookstore/Site.Master
@@ -128,7 +128,7 @@
                             </asp:UpdatePanel>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="~/Login"><i class="fa-solid fa-user fa-lg"></i></a>
+                            <a class="nav-link" href="MiCuenta.aspx"><i class="fa-solid fa-user fa-lg"></i></a>
                         </li>
                     </ul>
                 </div>
