--- a/E_Commerce_Bookstore/Site.Master
+++ b/E_Commerce_Bookstore/Site.Master
@@ -67,6 +67,7 @@
 <body>
     <form runat="server">
         <!-- Navbar -->
+        <asp:Panel ID="pnlNavbar" runat="server">
         <nav class="navbar navbar-expand-lg navbar-light sticky-top">
             <div class="container">
                 <a class="navbar-brand" href="Default.aspx">📚 Book&Comic Store</a>
@@ -137,6 +138,7 @@
                 </div>
             </div>
         </nav>
+    </asp:Panel>
 
         <!-- Contenido Principal -->
         <main class="container my-5">
