--- a/E_Commerce_Bookstore/Site.Master
+++ b/E_Commerce_Bookstore/Site.Master
@@ -68,76 +68,76 @@
     <form runat="server">
         <!-- Navbar -->
         <asp:Panel ID="pnlNavbar" runat="server">
-        <nav class="navbar navbar-expand-lg navbar-light sticky-top">
-            <div class="container">
-                <a class="navbar-brand" href="Default.aspx">📚 Book&Comic Store</a>
+            <nav class="navbar navbar-expand-lg navbar-light sticky-top">
+                <div class="container">
+                    <a class="navbar-brand" href="Default.aspx">📚 Book&Comic Store</a>
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
 
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <!-- Menú de navegación -->
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="Default.aspx">Home</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="menuCategorias" role="button" data-bs-toggle="dropdown" data-toggle="dropdown" aria-expanded="false">Categorías</a>
-                            <ul class="dropdown-menu" aria-labelledby="menuCategorias" style="max-height: 60vh; overflow: auto;">
-                                <li><a class="dropdown-item" href="Catalogo.aspx">Todas</a></li>
-                                <li>
-                                    <hr class="dropdown-divider" />
-                                </li>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <!-- Menú de navegación -->
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item"><a class="nav-link" href="Default.aspx">Home</a></li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="menuCategorias" role="button" data-bs-toggle="dropdown" data-toggle="dropdown" aria-expanded="false">Categorías</a>
+                                <ul class="dropdown-menu" aria-labelledby="menuCategorias" style="max-height: 60vh; overflow: auto;">
+                                    <li><a class="dropdown-item" href="Catalogo.aspx">Todas</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider" />
+                                    </li>
 
-                                <asp:Repeater ID="repCategoriasNavbar" runat="server">
-                                    <ItemTemplate>
-                                        <li>
-                                            <a class="dropdown-item"
-                                                href='<%# "Catalogo.aspx?idCategoria=" + Eval("Id") %>'>
-                                                <%# Eval("Nombre") %>
-                                            </a>
-                                        </li>
-                                    </ItemTemplate>
-                                </asp:Repeater>
-                            </ul>
-                        </li>
-                        <li class="nav-item"><a class="nav-link" href="BestSeller.aspx">BestSeller</a></li>
-                        <li class="nav-item"><a class="nav-link" href="Populares.aspx">Populares</a></li>
-                        <li class="nav-item"><a class="nav-link" href="Ofertas.aspx">Ofertas</a></li>
-                        <li class="nav-item"><a class="nav-link text-primary" href="Administracion.aspx">Administracion</a></li>
-                    </ul>
+                                    <asp:Repeater ID="repCategoriasNavbar" runat="server">
+                                        <ItemTemplate>
+                                            <li>
+                                                <a class="dropdown-item"
+                                                    href='<%# "Catalogo.aspx?idCategoria=" + Eval("Id") %>'>
+                                                    <%# Eval("Nombre") %>
+                                                </a>
+                                            </li>
+                                        </ItemTemplate>
+                                    </asp:Repeater>
+                                </ul>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" href="BestSeller.aspx">BestSeller</a></li>
+                            <li class="nav-item"><a class="nav-link" href="Populares.aspx">Populares</a></li>
+                            <li class="nav-item"><a class="nav-link" href="Ofertas.aspx">Ofertas</a></li>
+                            <li class="nav-item">
+                                <asp:HyperLink ID="hlAdministracion" runat="server"
+                                    CssClass="nav-link text-primary"
+                                    NavigateUrl="Administracion.aspx"
+                                    Text="Administración" />
+                            </li>
 
-                    <!-- Buscador -->
-                    <div class="d-flex justify-content-center align-items-center flex-grow-1">
-                        <input class="form-control me-2 search-bar" type="search" placeholder="Buscar libros o cómics..." aria-label="Buscar" />
-                        <button class="btn btn-outline-dark" type="submit"><i class="fa fa-search"></i></button>
+                        </ul>
+
+                        <!-- Iconos usuario y carrito -->
+                        <ul class="navbar-nav ms-3">
+                            <li class="nav-item">
+                                <asp:ScriptManager ID="ScriptManager1" runat="server" />
+                                <asp:UpdatePanel ID="updCarrito" runat="server" UpdateMode="conditional">
+                                    <ContentTemplate>
+                                        <a class="nav-link position-relative" href="Carrito.aspx">
+                                            <i class="fa-solid fa-bag-shopping fa-lg"></i>
+                                            <asp:Label ID="lblCantidadCarrito" runat="server"
+                                                CssClass="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" />
+                                        </a>
+                                    </ContentTemplate>
+                                </asp:UpdatePanel>
+                            </li>
+                            <li class="nav-item d-flex align-items-center">
+                                <asp:HyperLink ID="hlBadgePerfil" runat="server" CssClass="nav-link d-flex align-items-center gap-2">
+                                    <i class="fa-solid fa-user fa-lg"></i>
+                                    <asp:Label ID="lblNombreUsuario" runat="server" CssClass="fw-bold text-dark" />
+                                </asp:HyperLink>
+                            </li>
+                        </ul>
                     </div>
-
-                    <!-- Iconos usuario y carrito -->
-                    <ul class="navbar-nav ms-3">
-                        <li class="nav-item">
-                            <asp:ScriptManager ID="ScriptManager1" runat="server" />
-                            <asp:UpdatePanel ID="updCarrito" runat="server" UpdateMode="conditional">
-                                <ContentTemplate>
-                                    <a class="nav-link position-relative" href="Carrito.aspx">
-                                        <i class="fa-solid fa-bag-shopping fa-lg"></i>
-                                        <asp:Label ID="lblCantidadCarrito" runat="server"
-                                            CssClass="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" />
-                                    </a>
-                                </ContentTemplate>
-                            </asp:UpdatePanel>
-                        </li>
-                        <li class="nav-item d-flex align-items-center">
-                            <asp:HyperLink ID="hlBadgePerfil" runat="server" CssClass="nav-link d-flex align-items-center gap-2">
-                                <i class="fa-solid fa-user fa-lg"></i>
-                                <asp:Label ID="lblNombreUsuario" runat="server" CssClass="fw-bold text-dark" />
-                            </asp:HyperLink>
-                        </li>
-                    </ul>
                 </div>
-            </div>
-        </nav>
-    </asp:Panel>
+            </nav>
+        </asp:Panel>
 
         <!-- Contenido Principal -->
         <main class="container my-5">
